# YetAnotherShadingLanguage

./: .gitignore  Cargo.toml  README.md
yasl-cli/: Cargo.toml
yasl-cli/src/: main.rs
yasl-cli/test/: main_vert.yasl  vert.yasl
yasl-core/: Cargo.toml
yasl-core/src/: convert.rs  glsl.rs  lib.rs  yasl_block.rs  yasl_expr.rs  yasl_file.rs  yasl_ident.rs  yasl_item.rs  yasl_stmt.rs  yasl_type.rs
yasl-core/src/yasl_expr/: assign.rs  assign_op.rs  binary.rs  call.rs  cast.rs  expr_if.rs  expr_return.rs  field.rs  lit.rs  unary.rs
yasl-core/src/yasl_item/: func.rs  layout.rs  static_it.rs
yasl-core/src/yasl_stmt/: local.rs
yasl-core/src/yasl_type/: yasl_scalar.rs  yasl_vec.rs
yasl-example/: Cargo.toml
yasl-example/src/: main.rs
yasl-macro/: Cargo.toml
yasl-macro/src/: convert.rs  lib.rs  yasl_block.rs  yasl_file.rs  yasl_ident.rs  yasl_item.rs  yasl_local.rs  yasl_stmt.rs  yasl_type.rs
yasl-macro/src/yasl_expr/: assign.rs  assign_op.rs  call.rs  lit.rs
yasl-macro/src/yasl_item/: func.rs  layout.rs
yasl-macro/src/yasl_type/: yasl_vec.rs
