[package]
name = "yasl-cli"
version = "0.1.0"
authors = ["Poly <marynczak.bartlomiej@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn= { version="1.0.18", features=["extra-traits","full"]}


yasl-core={path="../yasl-core"}

shaderc = "0.6.2"