[package]
name = "yasl-macro"
version = "0.1.0"
authors = ["Poly <marynczak.bartlomiej@gmail.com>"]
edition = "2018"


[lib]
proc-macro = true

[features]
default=["use-shaderc"]
# default=["use-glsl-to-spirv"]

use-shaderc=["shaderc"]
use-glsl-to-spirv=["glsl-to-spirv"]

[dependencies]
syn= { version="1.0.18", features=["extra-traits","full"]}
quote="1.0.3"


shaderc = {version="0.6.2", optional=true}
glsl-to-spirv = {version="0.1.7", optional=true}


